--- a/index.html
+++ b/index.html
@@ -6,13 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masud Al Mahdi</title>
     <style>
-        .gray{ color: white; background-color: #344;}
+        *{margin: 0;padding: 0; font-family: 'Yu Gothic UI', sans-serif;}
+        section{padding: 2rem;}
+        h1{padding-top: 1rem;padding-bottom: 1rem; font-size: 2rem; font-weight: 100;}
+        .gray{ color: white; background-color: #344; font-weight: 100;}
+        b{font-weight: 900; font-size: 0.8rem;}
     </style>
 </head>
 <body>
-    <div class="gray">
-        <h2>Masud Al Mahdi</h2>
-        <h4>Software Developer</h4>
-    </div>
+    <section class="gray">
+        <h1>Masud Al Mahdi</h1>
+        <b><h4>Software Developer</h4></b>
+    </section>
+    <section>
+        <h1>Header</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat beatae sed omnis, obcaecati animi fugit possimus nobis aperiam ratione expedita natus in maiores ipsum fugiat magni, asperiores molestiae voluptatum optio.</p>
+    </section>
+    <section>
+        <h1>Header</h1>
+        <p>Mollitia odit saepe culpa dolorem esse amet ullam sequi fuga, voluptate totam dolores maxime rerum, libero deleniti porro minus fugiat doloribus ut, eligendi praesentium in quo impedit sit vitae. Inventore.</p>
+    </section>
+    <section>
+        <h1>Header</h1>
+        <p>Dolorem, minus maiores? Maxime qui harum eveniet culpa, dignissimos ipsum recusandae excepturi mollitia placeat repudiandae labore, vel ab voluptates. Eum dicta in alias ipsa ut nisi veritatis enim, explicabo praesentium.</p>
+    </section>
+    <section>
+        <h1>Header</h1>
+        <p>Perspiciatis, iste maiores. Molestias, minima ex! Numquam maxime praesentium dolorum aperiam a amet fugiat officia reiciendis quibusdam! Ea magni inventore, repudiandae voluptatum commodi debitis itaque aliquam. Ab quisquam illum vero.</p>
+    </section>
+    <section>
+        <h1>Header</h1>
+        <p>Culpa aliquam dicta aut adipisci dolorum nisi iste quos ipsa temporibus. Expedita commodi quasi odio autem totam, enim cum voluptatum recusandae possimus. Hic, quisquam neque. Velit nesciunt doloribus facere aut.</p>
+    </section>
+    <section>
+        <h1>Header</h1>
+        <p>Odio officiis ea ex quisquam suscipit quo id perspiciatis expedita at obcaecati quaerat, harum aperiam, maxime nisi pariatur, quas cupiditate reprehenderit minima sapiente! Expedita ad sunt repellendus minus quia ex.</p>
+    </section>
+    <section>
+        <h1>Header</h1>
+        <p>Facilis deleniti neque voluptatibus dolore provident sint explicabo vitae voluptatem delectus ad vero modi quibusdam iste esse autem, adipisci, laborum mollitia eligendi cumque, voluptatum ullam! Quod nihil architecto illum neque?</p>
+    </section>
+    <section>
+        <h1>Header</h1>
+        <p>Temporibus est quia ea neque rem iure delectus? Eligendi eos perspiciatis earum ex velit assumenda, excepturi aspernatur alias eveniet porro, saepe blanditiis officiis quis? Deleniti, earum vitae! Quam, facere possimus.</p>
+    </section>
 </body>
 </html>
